@@ -18,13 +18,13 @@
 
 <addon id="metadata.imdbrt.com"
        name="IMDb + RT"
-       version="1.2.1"
+       version="1.2.2"
        provider-name="mortstar (IMDb by Team XBMC)">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
     <import addon="metadata.common.themoviedb.org" version="1.0.7"/>
     <import addon="metadata.common.movieposterdb.com" version="1.0.4"/>
-    <import addon="metadata.common.imdb.com" version="2.0.8"/>
+    <import addon="metadata.common.imdb.com" version="2.1.0"/>
     <import addon="metadata.common.impa.com" version="1.0.3"/>
     <import addon="metadata.common.hdtrailers.net" version="1.0.6"/>
 	<import addon="metadata.common.rt.com" version="1.0.0"/>
